fixed overflow on nav

--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -2,7 +2,8 @@
 * {
     margin: 0;
     padding: 0;
-    box-sizing: border-box;
+    -webkit-box-sizing: border-box;
+            box-sizing: border-box;
 }
 
 html,
@@ -68,6 +69,7 @@ h3 {
 /* ----- header ----- */
 
 header {
+    background-image: -webkit-gradient(linear, left top, left bottom, from(rgba(0, 0, 0, 0.7)), to(rgba(0, 0, 0, 0.7))), url(img/background-header.jpg);
     background-image: linear-gradient(rgba(0, 0, 0, 0.7), rgba(0, 0, 0, 0.7)), url(img/background-header.jpg);
     background-size: cover;
     background-position: center;
@@ -82,7 +84,8 @@ header {
     top: 50%;
     left: 50%;
     width: 1140px;
-    transform: translate(-50%, -50%);
+    -webkit-transform: translate(-50%, -50%);
+            transform: translate(-50%, -50%);
 }
 /* --------------------------------------------*/
 
@@ -95,6 +98,7 @@ header {
     font-weight: 300;
     text-decoration: none;
     border-radius: 200px;
+    -webkit-transition: background-color 0.2s, border 0.2s;
     transition: background-color 0.2s, border 0.2s;
 }
 
@@ -152,6 +156,14 @@ header {
     list-style: none;
     text-align: center;
     display: block;
+    overflow: auto;
+    scrollbar-width: none; /* Firefox */
+    -ms-overflow-style: none;  /* Internet Explorer 10+ */
+}
+
+.main-nav::-webkit-scrollbar { /* WebKit */
+    width: 0;
+    height: 0;
 }
 
 .main-nav li {
@@ -167,6 +179,7 @@ header {
     text-transform: uppercase;
     font-size: 90%;
     border-bottom: 2px transparent;
+    -webkit-transition: border-bottom 0.1s;
     transition: border-bottom 0.1s;
 }
 
